# dailydrive

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
dailydrive/: .env  asgi.py  settings.py  urls.py  wsgi.py
quotes/: models.py  urls.py  views.py
quotes/migrations/: 0001_initial.py
quotes/templates/: base.html
quotes/templates/quotes/: index.html
quotes/templates/registration/: login.html  signup.html
quotes/templates/saved-quotes/: saved_quotes.html
quotes/templates/scss/: _variables.scss
staticfiles/: staticfiles.json
